Work on Responsive Navigation Bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <header>
 
+        <div id="menu" class="fas fa-bars"></div>
         <a href="#" class="logo"><i class="fas fa-user-graduate">LOGO</i></a>
         <nav class="navbar">
             <ul>
