Hero Section Done

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 
     </header>
 
+    <section class="home" id="home">
+        <h1>For UVPCE Students</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, nesciunt quas. Perferendis cumque eligendi possimus sapiente natus aperiam? Voluptate corporis eius vitae accusamus obcaecati esse tempore doloribus eos laborum quis.</p>
+        <a href="#"><button class="btn">Get Start</button></a>
+
+    </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="index.js"></script>
 </body>
