--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
 
         <div id="menu" class="fas fa-bars"></div>
-        <a href="#" class="logo"><i class="fas fa-user-graduate">LOGO</i></a>
+        <a href="#" class="logo"><i class="fas fa-user-graduate">Ganpat UVPCE</i></a>
         <nav class="navbar">
             <ul>
                 <li><a class="active" href="#home">Home</a></li>
@@ -35,3 +35,5 @@
     <script src="index.js"></script>
 </body>
 </html>
+
+<!-- 23:33 -->
