Adding Announcement section

--- a/index.html
+++ b/index.html
@@ -29,11 +29,41 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, nesciunt quas. Perferendis cumque eligendi possimus sapiente natus aperiam? Voluptate corporis eius vitae accusamus obcaecati esse tempore doloribus eos laborum quis.</p>
         <a href="#"><button class="btn">Get Start</button></a>
 
+        <div class="shape"></div>
     </section>
 
+    <section class="about" id="about">
+        <div class="image">
+            <img src="./about club.png" alt="">
+        </div>
+        <div class="content">
+            <h3>What We Do!</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsa fugiat ex voluptates obcaecati quas ipsum laudantium sint eum, odit excepturi harum architecto, voluptatum iste impedit sunt repellat neque doloribus?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsa fugiat ex voluptates obcaecati quas ipsum laudantium sint eum, odit excepturi harum architecto, voluptatum iste impedit sunt repellat neque doloribus?</p>
+
+            <a href="#"><button class="btn">Learn More!</button></a>
+        </div>
+
+    </section>
+
+    <section class="announcement">
+        <h1 class="heading">Announcement</h1>
+        <div class="box-contianer">
+            <div class="box">
+                <img src="./about club.png" alt="">
+                <h3 class="time">00:00</h3>
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui blanditiis nostrum a rem itaque adipisci debitis pariatur natus cum nobis cumque molestias eum voluptatum ullam, aperiam consectetur perferendis saepe neque.</p>
+                    <div class="info">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
 
-<!-- 23:33 -->
+<!-- 29:00 -->
