Arrenging Responsive Navigation Bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
 
         <div id="menu" class="fas fa-bars"></div>
-        <a href="#" class="logo"><i class="fas fa-user-graduate">Ganpat UVPCE</i></a>
+        <a href="#" class="logo"><i class="fas fa-user-graduate">UVPCE</i></a>
         <nav class="navbar">
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -32,7 +32,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, nesciunt quas. Perferendis cumque eligendi
             possimus sapiente natus aperiam? Voluptate corporis eius vitae accusamus obcaecati esse tempore doloribus
             eos laborum quis.</p>
-        <a href="#"><button class="btn">Get Start</button></a>
+        <a href="#announcement"><button class="btn">Announcement</button></a>
+        <a href="#material"><button class="btn">Materials</button></a>
 
         <div class="shape"></div>
     </section>
